fix text alignment for maptips

--- a/public/stylesheets/core.css
+++ b/public/stylesheets/core.css
@@ -1158,6 +1158,9 @@ ul.times li span.percent {
 /*------------------------------------------------------------------------------------
   @group maptip
 ------------------------------------------------------------------------------------*/
+.maptip {
+  text-align: left;
+}
 
 .maptip h2 {
   min-height: 14px;
